# sharkFileStats

./: CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md
.github/workflows/: build.yml
commandlineparser/: CMakeLists.txt  parser.cxx  parser.h
firstuniversalWINuLINUXcpp/: CMakeLists.txt  firstuniversalWINuLINUXcpp.cpp  firstuniversalWINuLINUXcpp.h  global.h  osspec.h
firstuniversalWINuLINUXcpp/getDiskStats/: diskstats.cxx  diskstats.h
stringtochar/: CMakeLists.txt  stchar.cxx  stchar.h
